--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -7,10 +7,8 @@
     <title>My Book</title>
   </head>
   <body>
-    Before
-    <br />
+    <%- include('../partials/header.ejs') %>
+    <%- include('../partials/error-message.ejs') %>
     <%- body %>
-    <br />
-    After
   </body>
 </html>
